# fingerprint

./: Makefile  Makefile.am  README.md  autogen.sh  configure.ac  configure.ac.in
build-aux/: js2c.sh
lib/: Makefile.am  fingerprint.c  fingerprint.js
packaging/: fingerprint.spec  fingerprint.spec.in
src/: Makefile.am  fingerprint.xml.in
src/js/: main.js  newmain.js
tests/: Makefile.am  atlocal.in  javascript.at  library.at  testsuite.at
